[package]
authors = ["Ben Wishovich <ben@benw.is>"]
description = "A rate-limiting middleware for Tower backed by the governor crate that allows configurable key based and global limits"
license = "MIT OR Apache-2.0"
name = "tower_governor"
readme = "README.md"
version = "0.7.0"
edition = "2021"
keywords = ["axum", "tower", "tonic", "rate-limit", "governor"]
categories = ["web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
forwarded-header-value = "0.1.1"
governor = "0.8.0"
http = "1.0.0"
http-body-util = "0.1"
pin-project = "1.0.12"
thiserror = "2.0.0"
tonic = {version = "0.13", no-default-features = true}
tower = "0.5.1"
tracing = { version = "0.1.37", features = ["attributes"] }

axum = { version = "0.8", optional = true }

[dev-dependencies]
hyper = "1"
reqwest = {version = "0.12", default-features = false, features = ["json"]}
serde_json = "1.0.89"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[features]
default = []
# Enables tracing output for this middleware
tracing = []
